infrastructure/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: raas
  labels:
    name: raas
    environment: shared
